// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/PostAttachment should match snapshot 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <div
          data-testid="post-markdown"
        >
          post message
        </div>
      </div>
      <div
        data-testid="pluggable-mock"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment should match snapshot, on Show Less 1`] = `
<div>
  <div
    class="post-message post-message--expanded post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style=""
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <div
          data-testid="post-markdown"
        >
          post message
        </div>
      </div>
      <div
        data-testid="pluggable-mock"
      />
    </div>
    <div
      class="post-collapse"
    >
      <div
        class="post-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-up"
          />
          Show less
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment should match snapshot, on Show More 1`] = `
<div>
  <div
    class="post-message post-message--collapsed post-message--overflow"
  >
    <div
      class="post-message__text-container"
      style="max-height: 1px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <div
          data-testid="post-markdown"
        >
          post message
        </div>
      </div>
      <div
        data-testid="pluggable-mock"
      />
    </div>
    <div
      class="post-collapse"
    >
      <div
        class="post-collapse__show-more"
      >
        <div
          class="post-collapse__show-more-line"
        />
        <button
          class="post-collapse__show-more-button"
          id="showMoreButton"
        >
          <span
            class="fa fa-angle-down"
          />
          Show more
        </button>
        <div
          class="post-collapse__show-more-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment should match snapshot, on deleted post 1`] = `
<div>
  <p>
    (message deleted)
  </p>
</div>
`;

exports[`components/post_view/PostAttachment should match snapshot, on edited post 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <div
          data-testid="post-markdown"
        >
          post message
        </div>
      </div>
      <div
        data-testid="pluggable-mock"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment should match snapshot, on ephemeral post 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <div
          data-testid="post-markdown"
        >
          post message
        </div>
      </div>
      <div
        data-testid="pluggable-mock"
      />
    </div>
  </div>
</div>
`;
